fixing scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -54,22 +54,13 @@ body {
   overflow: auto;
 }
 
-#scroll::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	border-radius: 10px;
+#scroll::-webkit-scrollbar {
+  display: none;
 }
 
-#scroll::-webkit-scrollbar
-{
-	width: 8px;
-}
-
-#scroll::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(160, 31, 31, 0.3);
-	background-color: #83c0d68e;
+#scroll {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 
